--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,23 @@ flex-direction: column;
   height: 50px;
 }
 
+.white-circle {
+  background-color: white;
+  color: white;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+}
+
+.gray-circle {
+  background-color: darkgray;
+  color: darkgray;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+
+}
+
 section#board {
 display: grid;
 grid-template-rows: repeat(5, 10vmin);
