--- a/css/style.css
+++ b/css/style.css
@@ -1,44 +1,22 @@
 body {
   background-color: white;
 /* Use a system font, if none are available use an available sans-sarif   font */
-font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-  Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-margin: 0;
-height: 100vh;
-display: flex;
-flex-direction: column;
-}
-
-.circle {
-  background: lightblue;
-  border-radius: 50%;
-  width: 50px;
-  height: 50px;
-}
-
-.white-circle {
-  background-color: white;
-  color: white;
-  border-radius: 50%;
-  width: 50px;
-  height: 50px;
-}
-
-.gray-circle {
-  background-color: darkgray;
-  color: darkgray;
-  border-radius: 50%;
-  width: 50px;
-  height: 50px;
-
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  margin: 0;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .columns {
   display: grid;
-  grid-template-columns: repeat(6, 10vmin);
-  grid-gap: 1vmin;
+  grid-template-columns: repeat(7, 10vmin);
+  grid-gap: 0vmin;
   justify-content: center;
-  height: 50px;
+  height: 80px;
 }
 
 .flex-container {
@@ -62,11 +40,24 @@ section#startBtns {
 }
 
 div.circle {
-border: 2px solid gray;
-font-size: 8vmin;
-text-align: center;
-vertical-align: middle;
+  background-color: lightblue;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  border: 2px solid gray;
+  font-size: 8vmin;
+  text-align: center;
+  vertical-align: middle;
 }
+
+.white-circle {
+  background-color: white !important;
+}
+
+.gray-circle {
+  background-color: darkgray !important;
+}
+
 
 h2 {
 text-align: center;
