--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,8 @@ body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   margin: 0;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  height: 90vh;
+  display: grid;
 }
 
 .columns {
@@ -36,7 +33,6 @@ section#board {
 section#startBtns {
   justify-content: center;
   text-align: center;
-  padding: 0px 0px 30px 0px;
 }
 
 div.circle {
@@ -57,7 +53,6 @@ div.circle {
 .gray-circle {
   background-color: darkgray !important;
 }
-
 
 h2 {
 text-align: center;
