--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 body {
   background-color: white;
-/* Use a system font, if none are available use an available sans-sarif   font */
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   margin: 0;
@@ -25,7 +24,7 @@ body {
 }
 
 section#board {
-  background-color: darkblue;
+  background-color: lightskyblue;
   display: grid;
   grid-template-rows: repeat(6, 10vmin);
   grid-template-columns: repeat(7, 10vmin);
@@ -51,6 +50,7 @@ div.circle {
 
 .yellow-circle {
   background-color: yellow !important;
+  
 }
 
 .red-circle {
@@ -75,11 +75,3 @@ h3 {
 justify-content: center;
 text-align: center;
 }
-
-/* #resetBtn {
-justify-content: center;
-text-align: center;
-margin: 20px 0px 10px 0px;
-width: 80px;
-display: flex;
-} */
